# realapp1

./: Cargo.toml  Dockerfile  fly.toml
.sqlx/: query-1a1ce81591b175d8b2b5da77037956eaa52181211a7b63c98a7e7651eb658889.json  query-409b396b9a0c47681732b1633f0b4878ddc4cc292bdcc217fec86535c9b0576c.json  query-6cbeb03b86722ad69655f707e0faf3b268d1e6e9ef485e7c5828c6ebf725469f.json
src/: main.rs
src/tools/: clients.rs  mod.rs
static/: client.html
