[package]
name = "realapp1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "realapp1"
path = "src/main.rs"

[dependencies]
rustvani = { version = "0.4.0-dev.6", features = ["vaniwebrtc"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
env_logger = "0.11"
log = "0.4"
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4" }
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
